--- a/.github/workflows/bin.yml
+++ b/.github/workflows/bin.yml
@@ -23,9 +23,8 @@ jobs:
         name: Detect Latest
         id: version
         env:
-          JQ_RELROOT: "https://github.com/${{ env.JQ_GHPROJ }}/releases"
           JQ_APIROOT: "https://api.github.com/repos/${{ env.JQ_GHPROJ }}"
-          JQ_DWROOT: "${{ env.JQ_RELROOT }}/download"
+          JQ_DWROOT: "https://github.com/${{ env.JQ_GHPROJ }}/releases/download"
         run: |
           printf '::set-output name=version::%s\n' \
             "$( wget -q -O - "${{ env.JQ_APIROOT }}/releases" |
@@ -36,8 +35,7 @@ jobs:
         name: Install
         uses: ./
         env:
-          JQ_RELROOT: "https://github.com/${{ env.JQ_GHPROJ }}/releases"
-          JQ_DWROOT: "${{ env.JQ_RELROOT }}/download"
+          JQ_DWROOT: "https://github.com/${{ env.JQ_GHPROJ }}/releases/download"
         with:
           installer: bin
           binary: jq
