--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,15 @@ inputs:
       removed).
     default: ""
     required: false
+  cache:
+    description: |
+      How long should installed binaries with the same name and in the same
+      destination directory, be kept in cache before a new download will be
+      attempted. This is best expressed as a number of seconds, but also
+      supports simple human-readable periods such as 3d or 5 months. The default
+      is to keep binaries for one day.
+    default: 1d
+    required: false
 
 outputs:
   path:
@@ -68,6 +77,7 @@ runs:
           "$( ${{ github.action_path }}/${{ inputs.installer }}install.sh \
                 --destination "${{ inputs.destination }}" \
                 --bin "${{ inputs.binary }}" \
+                --keep "${{ inputs.cache }}" \
                 --verbose \
                 -- \
                   "${{ inputs.url }}" )"
