use the tool cache for better caching over time

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,7 @@ jobs:
           binary: jq
           url: ${{ env.JQ_DWROOT }}/jq-${{ steps.version.outputs.version }}/jq-linux64
 
+      # Install again, this should not trigger a download again.
       -
         name: Install2
         uses: ./
