--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
     required: true
   destination:
     description: Destination directory for downloaded binaries
-    default: ${{ runner.tool_cache }}/${{ github.repository }}
+    default: ${{ runner.tool_cache }}/${{ github.repository }}/bin
     required: false
   binary:
     description: |
